# volkanic-console

./: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: build.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: logging.json  ui.json  window.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/cmd/: instance.rs  misc.rs  mod.rs  runner.rs
src-tauri/src/runner/: event.rs  http.rs  instance.rs  mod.rs
src/routes/: +page.svelte  InstanceBar.svelte  InstanceBarDivider.svelte  InstanceButton.svelte  NewInstanceModal.svelte  NewRunnerModal.svelte  PageView.svelte  RoundButton.svelte  SettingsPage.svelte  TitleBar.svelte
src/routes/(instance)/: InstanceOverview.svelte  InstanceStatusIcon.svelte  InstanceViewButton.svelte  NewInstance.svelte
src/scripts/: Event.ts  Instance.ts  Runner.ts  State.ts  event.ts  instance.ts  runner.ts  state.ts  view.ts
