[package]
name = "volkanic-console"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "volkanic_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.64"
reqwest = "0.12.8"
tokio = { version = "1.41.0", features = ["fs", "macros", "rt", "sync"] }
serde_jsonc = "1.0.108"
dirs = "5.0.1"

