[package]
name = "volkanic-console"
version = "0.1.0"
description = "Desktop application for managing Volkanic Runners"
authors = ["Alexander Hansen <alex@bitzero.me>"]
license = "GPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "volkanic_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"
reqwest = "0.12.9"
tokio = { version = "1.41.1", features = ["fs", "macros", "rt", "sync", "time"] }
serde_jsonc = "1.0.108"
dirs = "5.0.1"
uuid = { version = "1.11.0", features = ["v4"] }
tauri-plugin-dialog = "2"
url = "2.5.3"
futures-util = "0.3.31"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tauri-plugin-sentry = "0.2.0"

[profile.dev]
lto = "off"
opt-level = 0
incremental = true
debug = 0

[profile.release]
lto = "thin"
opt-level = 3
incremental = false
debug = 0
